<resources>
    <string name="app_name">JioTrack</string>
    <string name="title_activity_maps">JioTrack</string>
    <string name="map_name">JioTrack</string>
    <string name="action_settings">Setting</string>
    <string name="about_us">About Us</string>
    <string name="loginLabel">People Tracker</string>
    <string name="loginSubText">Login/Sign up</string>
    <string name="title_activity_login">Login</string>
    <string name="register_here"> <b>Register Here</b></string>
    <string name="request_otp"><u>Request OTP</u></string>
    <string name="forget_password"> <b>Click Here</b></string>
    <string name="pagerindicater">&amp;#9673;</string>
    <string name="white_indicater">&amp;#9673;</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="helpScreen1heading">Don\'t lose sight of your loved ones</string>
    <string name="helpScreen1desc">Track live location of device and view it on Maps</string>
    <string name="helpScreen2heading">Share the location of loved ones</string>
    <string name="helpScreen2desc">Share the location of device with your partner so they can track as well</string>
    <string name="helpScreen3heading">Track people &amp; pets in a group</string>
    <string name="helpScreen3desc">Create groups to track your loved ones collectively</string>
    <string name="helpScreen4heading">Use SOS in case of Emergency</string>
    <string name="helpScreen4desc">Utilize Emergency SOS calls to help in distressing situation</string>
    <string name="helpScreen5heading">Receive active alerts</string>
    <string name="helpScreen5desc">Get alerted on whereabouts of devices based on your own settings</string>
    <string name="instruction">* \t  Click on + icon to add details of device (associated with a person/pet), or to create a group of devices to be tracked. \n* \t Select Add Device or Add Person accordingly. \n* \t Device details may be entered manually or using QR code scanner. Person details may be addded manually or by selecting the contact from contacts. After adding the device/person/group, click on \"Request consent\" to obtain consent approval from the device/person. \n* \t After consent approval is received from the device/person over SMS, select the device/person from the  list and click on \"Track\" to start tracking.</string>
    <string name="instructionOnActiveSession">* \t  No active member/group found.\n* \t Please add member as a group/individual to view them in active session.</string>
    <string name="instructionOnActiveMember">No active member found for this group. Please add member to view them in group.</string>
    <string name="message">Are you sure, do you want user to track your location ?</string>
    <string name="termcondition">Jio Friends and Family helps you to track the Jio devices which has data in portal. This application will display the location information completely along with address details and pin drop of location on map to identify the details easily.\n \nDevice which has the application will always send current location details and this can be done once the location permissions are accepted when you launch the application.\n \nTo track device we need to take approval from the person who is using the device once that is approved then we can track the device.\n \nLocation permissions and SMS permissions are mandatory to use this application.\n \nPlease agree the terms and conditions.</string>
    <string name="refresh_inteval_textview">Location refresh interval</string>
    <string name="device_type">Device Type</string>
    <string name="login_heading"><b>Login :</b></string>
    <string name="login_help">It is mandatory for the user to login by using the credentials used during registration. Without login, the user will not be able to use the application.</string>
    <string name="registration_heading"><b>Registration :</b></string>
    <string name="registration_help"> To use this application user has to register by entering above details. But, to complete registration it is mandatory to have JIO sim in SIM slot 1.</string>
    <string name="location_heading"><b>Track :</b></string>
    <string name="location_help">Location of the device being tracked will be displayed on the map as a pin-drop. Tapping on the pin-drop will display address of the location.\nLocation of multiple devices will be displayed as multiple pin-drops on the map.</string>
    <string name="home_heading"><b>Home :</b></string>
    <string name="home_help">Logged-in user can add a device to be tracked by clicking (+) button provided on the bottom-right corner of the screen.\nDevice\'s phone number and IMEI number are required for device addition. \nAfter the device is added successfully, it will be displayed on the screen as shown above.</string>
    <string name="home_help1">To track the device, please click on the "Request Consent" and get an approval from the owner of the device to be tracked.\nTracking can be initiated after consent is approved by the device owner.</string>
    <string name="notification_title">Jio friends and family</string>
    <string name="foreground_service_channel">Foreground Service Channel</string>
    <string name="notification_subtitle">Track friends and family</string>
    <string name="customintent">custom-intent</string>
    <string name="approveURI">https://stg.borqs.io/fms-consent-status?consentId</string>
    <string name="channel_name">channel_name</string>
    <string name="channel_description">channel_description</string>
    <string name="device_imei">IMEI*</string>
    <string name="trackee_number">Number*</string>
    <string name="trackee_name">Name*</string>
    <string name="group_name_textview">Please enter your group name</string>
    <string name="add_manual">Add manually</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="qrscan_instruction">A QR code will be available to \nthe back side of your device \nbox.</string>
    <string name="qrcode_text">Align QR Code with in the \nframe to scan</string>
    <string name="add_device">Add Device</string>
    <string name="add_contact">Add Contact</string>
    <string name="add_device_later">Add device later</string>
    <string name="add_device_info">To track any Device/Person choose below options to Add Device/Add Contact and then start tracking.</string>
    <string name="purchase_info">Inorder to purchase device follow the link</string>
    <string name="purchase_link">www.myjio/devices/JioTrack</string>
    <string name="add_people_text">Add people from your contacts or add their name and mobile number</string>
    <string name="continue_text">Continue</string>
    <string name="add_later">Add later</string>
    <string name="rescan_qrcode_instruction">Device not found. Please try \nscanning the QR code again or you can \nadd device manually by entering the \nIMEI number</string>
    <string name="add_to_group">Add to group</string>
    <string name="select_icon_text">Let\'s choose any one with whom you \nwant to attach your device</string>
    <string name="people_title">PEOPLE</string>
    <string name="pet_title">PET</string>
    <string name="drawerOpen">Open </string>
    <string name="drawerClose">Close</string>
    <string name="chooseGroupText">Now choose any group or \ncreate new group in which \n \t you want to track</string>
    <string name="signInHelloTextView">Hello! Let\'s get started</string>
    <string name="sentOTPTextView">OTP has been sent</string>
    <string name="customizeProfile">Customize profile</string>
    <string name="alternate_number_textview">Mobile Number</string>
    <string name="enterMobileNumberTextView">To Login please enter your\n \t \t \t \t mobile number</string>
    <string name="customizeProfileTextView">To customize your profile,\nplease enter below details</string>
    <string name="alternate_number_security_textview">Please enter your phone number \nwhich can be used for login</string>
    <string name="requestOTPTextView">By requesting OTP you agree to the</string>
    <string name="choose_group_icon">Add group picture</string>
    <string name="choose_group_icon_text">You can choose from below icon</string>
    <string name="terms_privacy_policy">Terms &amp; Privacy Policy</string>
    <string name="tracking_by_default_text">Users who are tracking you will be displayed here.</string>
    <string name="tracked_by_default_text">Users whom you are tracking you will be displayed here.</string>
    <string name="geofence_entry">Geofence entry</string>
    <string name="geofence_exit">Geofence exit</string>
    <string name="geofence_entry_desc">Receive notification when your loved one enters a geofence</string>
    <string name="geofence_exit_desc">Receive notification when your loved one exits a geofence</string>
    <string name="battery_text">Minimum battery</string>
    <string name="battery_desc">Select minimum battery charge, below which the you will get alert.</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_desc">Repeat alert will receive if you don’t react to notification</string>
    <string name="polling_frequency">Polling frequency</string>
    <string name="polling_freq_text">Configure Set the interval at which you want to receive the location</string>
    <string name="select_time">Select time</string>
    <string-array name="device_type_array">
        <item>People Tracker</item>
        <item>Pet Tracker</item>
        <item>Device Tracker</item>
    </string-array>
    <string name="about_app_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in \n\nLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in et dolore magna \naliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in </string>
    <string name="app_version">Version : v2.33.0003 </string>
    <string name="how_to_use_manual_add_1">Enter 10 digit mobile number \nwhich comes with device. You can \nfind out {place on packet}</string>
    <string name="how_to_use_manual_add_2">Please wait till the device is getting \nconnected with phone</string>
    <string name="how_to_use_manual_add_3">Attached device to any asset and \nsave the information to get it track.</string>
</resources>