<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardviewlayout_device_background_color"
    >

    <include
        android:id="@+id/adddDeviceToolbar"
        layout="@layout/toolbar"
        />

    <TextView
        android:id="@+id/adddevice_help_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/margin_24"
        android:layout_marginTop="@dimen/fifteen_dp"
        android:text="@string/add_device_info"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_below="@+id/adddDeviceToolbar"
        android:layout_marginRight="@dimen/margin_24"
        android:textSize="@dimen/device_content_font_size"

        />

    <ImageView
        android:id="@+id/addDeviceImg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="22dp"
        android:layout_below="@+id/adddevice_help_title"
        android:layout_above="@+id/purchase_title"
        android:layout_marginTop="10dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="5dp"
        android:src="@drawable/jiotrack" />

    <TextView
        android:id="@+id/purchase_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/margin_24"
        android:layout_marginTop="@dimen/fifteen_dp"
        android:text="@string/purchase_info"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_above="@+id/purchase_link"
        android:layout_marginRight="@dimen/margin_24"
        android:textSize="@dimen/adddevice_content_font_size"

        />
    <TextView
        android:id="@+id/purchase_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/margin_24"
        android:layout_marginTop="2dp"
        android:text="@string/purchase_link"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_above="@+id/add_device"
        android:layout_marginRight="@dimen/margin_24"
        android:layout_marginBottom="25dp"
        android:textStyle="bold"
        android:textSize="@dimen/adddevice_content_font_size"

        />

    <Button
        android:id="@+id/add_device"
        android:layout_width="@dimen/adddevice_button_width"
        android:layout_height="@dimen/adddevice_button_height"
        android:background="@drawable/button_frame_blue"
        android:text="@string/add_device"
        android:layout_above="@+id/add_contact"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:layout_marginBottom="15dp"
        android:textColor="@android:color/white"
        android:textSize="@dimen/adddevice_content_font_size" />

    <Button
        android:id="@+id/add_contact"
        android:layout_width="@dimen/adddevice_button_width"
        android:layout_height="@dimen/adddevice_button_height"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/margin_24"
        android:text="@string/add_contact"
        android:layout_marginBottom="30dp"
        android:textAllCaps="false"
        android:background="@drawable/button_frame_blue"
        android:textColor="@color/white"
        android:layout_marginRight="@dimen/margin_24"
        android:layout_alignParentBottom="true"
        android:textSize="@dimen/adddevice_content_font_size"

        />

</RelativeLayout>