<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loginFrameLayout"
    android:background="@color/dull_text_color"
    tools:context=".view.HowToUseActivity">
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="10dp"

    card_view:cardElevation="8dp"
    android:orientation="horizontal"
    android:padding="16dp"
    tools:context=".view.DashboardActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/manual_add_text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_to_use_manual_add_1"
            android:gravity="left"
            android:textSize="@dimen/seventeen_dp"
            android:layout_marginTop="@dimen/twenty_dp"
            android:layout_marginLeft="@dimen/margin_40"
            android:layout_marginRight="@dimen/margin_30"
            />

        <TextView
            android:id="@+id/manual_add_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_to_use_manual_add_2"
            android:layout_above="@+id/manual_add_image"
            android:textSize="@dimen/seventeen_dp"
            android:gravity="left"
            android:layout_marginLeft="@dimen/margin_30"
            android:layout_marginRight="@dimen/margin_30"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:id="@+id/manual_add_image"
            android:src="@drawable/howtoadd_2"
            android:layout_marginTop="@dimen/fifty_dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/twenty_dp"
            android:layout_above="@+id/manual_add_text3"
            />
        <TextView
            android:id="@+id/manual_add_text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_to_use_manual_add_3"
            android:textSize="@dimen/seventeen_dp"
            android:gravity="left"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/twenty_dp"
            android:layout_marginLeft="@dimen/margin_40"
            android:layout_marginRight="@dimen/margin_30"
           android:paddingBottom="@dimen/twenty_dp"
            />

    </RelativeLayout>

</androidx.cardview.widget.CardView>
</RelativeLayout>
