<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dull_text_color"
    >

    <include
        android:id="@+id/editToolbar"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:id="@+id/bluebackground"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@+id/editToolbar"
        android:background="@drawable/layout_frame_blue" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/bluebackground"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="@dimen/twenty_dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="@dimen/twenty_dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ImageView
                android:id="@+id/app_icon"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginLeft="@dimen/margin_30"
                android:layout_marginTop="@dimen/margin_24"
                android:src="@drawable/app_icon" />

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/sixteen_dp"
                android:layout_toRightOf="@+id/app_icon"
                android:text="@string/app_name"
                android:textColor="@color/alert_text_color"
                android:textSize="@dimen/twenty_dp"
                android:layout_alignTop="@+id/app_icon"
                android:textStyle="bold"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/app_icon"
                android:text="@string/app_version"
                android:layout_below="@+id/app_name"
                android:textColor="@color/alert_text_color"
                android:textSize="@dimen/seventeen_dp"
                android:layout_alignLeft="@+id/app_name"
                android:textStyle="bold"
                android:visibility="visible"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/app_version"
                android:text="@string/about_app_content"
                android:lineSpacingExtra="4dp"
                android:textColor="@color/alert_text_color"
                android:textSize="@dimen/fourteen_dp"
                android:layout_marginLeft="@dimen/margin_33"
                android:layout_marginRight="@dimen/margin_35"
                android:layout_marginTop="@dimen/sixteen_dp"
                />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>