<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SignupFragment">

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/signUpImageIcon"
                android:layout_width="80dp"
                android:layout_height="79.98dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="145dp"
                android:background="@drawable/ic_customiseprofile" />

            <TextView
                android:id="@+id/signUpcustomizeProfile"
                android:layout_width="178dp"
                android:layout_height="wrap_content"
                android:text="@string/customizeProfile"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="120dp"
                android:textColor="@color/black"
                android:layout_below="@id/signUpImageIcon"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/enterNameTextView"
                android:layout_width="178dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginLeft="115dp"
                android:text="@string/customizeProfileTextView"
                android:layout_below="@id/signUpcustomizeProfile"
                android:textColor="@color/black"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/signUpNameEditText"
                android:layout_width="312dp"
                android:layout_height="wrap_content"
                android:hint="Name"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="20dp"
                android:backgroundTint="@color/black"
                android:layout_below="@id/enterNameTextView"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/signUpNameEditText"
                android:textColor="@color/lite_blue"
                android:textSize="12dp"
                android:layout_alignRight="@id/signUpNameEditText"
                android:text="Add Later"/>

            <Button
                android:id="@+id/continueLogin"
                android:layout_width="232dp"
                android:layout_height="36dp"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="60dp"
                android:textAllCaps="false"
                android:text="Continue"
                android:textColor="@color/white"
                android:background="@drawable/selector"
                android:layout_below="@id/signUpNameEditText"/>

            <TextView
                android:id="@+id/requestOTPTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:layout_below="@id/continueLogin"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="70dp"
                android:text="@string/requestOTPTextView"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/termConditionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:layout_below="@id/requestOTPTextView"
                android:textColor="@color/lite_blue"
                android:layout_marginLeft="65dp"
                android:text="Terms &amp; Conditions &amp; Privacy Policy"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>